// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractInputsFromFunctionSql should extract the inputs accurately in this example 1`] = `
Array [
  TypeDefinitionOfResourceInput {
    "name": "in_url",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_caption",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_credit",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_alt_text",
    "type": Array [
      "string",
      "null",
    ],
  },
]
`;

exports[`extractInputsFromFunctionSql should extract the inputs accurately in this other example 1`] = `
Array [
  TypeDefinitionOfResourceInput {
    "name": "in_suggestion_source",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_external_id",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_suggested_idea_id",
    "type": Array [
      "number",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_status",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_result",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_resultant_curated_idea_id",
    "type": Array [
      "number",
      "null",
    ],
  },
]
`;

exports[`extractInputsFromFunctionSql should extract the inputs accurately in this other example again 1`] = `
Array [
  TypeDefinitionOfResourceInput {
    "name": "in_array",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_delimiter",
    "type": Array [
      "string",
      "null",
    ],
  },
  TypeDefinitionOfResourceInput {
    "name": "in_index",
    "type": Array [
      "number",
      "null",
    ],
  },
]
`;
